<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="signup_introduction_title">Why signup?</string>
    <string name="signup_introduction_title1">Upload Horses</string>
    <string name="signup_introduction_desc1">Signing up allows you to upload your own horses on Giddy-App</string>
    <string name="signup_introduction_title2">Contact owners</string>
    <string name="signup_introduction_desc2">Get in contact with the owner of your favorite horse, maybe it can be yours one day</string>
    <string name="signup_introduction_title3">Find your Horse</string>
    <string name="signup_introduction_desc3">Get notified when the \"horse of your dreams\" is available</string>
    <string name="signup_go">Giddy up</string>
</resources>